2008-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Some more documentation additions.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

	* NEWS: Updates

2008-11-28  Behdad Esfahbod  <behdad@gnome.org>

	Bug 562639 – g_parse_debug_flags() parsing "help"

	* glib/gutils.c (g_parse_debug_string): Print available keys if
	string is "help".

2008-11-28  Behdad Esfahbod  <behdad@gnome.org>

	Bug 562638 – GDebugKey key member should be const

	* glib/gutils.h: Change GDebugKey key member from gchar * to
	const gchar *.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 547264 – Missing "no flags" flag

	* glib/gregex.c: Mention 0 as value for 'no flags' in some places..
	Pointed out by Bastien Nocera

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562544 – g_key_file_get_string and g_key_file_get_value
	documentation does not explain the difference

	* glib/gkeyfile.c (g_key_file_get_string): Explain the difference
	to g_key_file_get_value(). Pointed out by Mart Raudsepp.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Refer to @locale parameters as locale identifier
	in docs.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 557603 – carbon check output misplaced

	* configure.in: Call AC_PROG_CPP early to avoid it messing up
	carbon check output. Fix proposed by Christian Persch

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559110 – Do not include libintl.h after glibintl.h

	* glib/glibintl.h: Define bind_textdomain_codeset in the DISABLE_NLS
	branch. Patch by Peter Kjellerstedt.

	* glib/gutil.c: Don't include libintl.h directly.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>
